--- a/ccminer.vcxproj.filters
+++ b/ccminer.vcxproj.filters
@@ -976,9 +976,6 @@
     <CudaCompile Include="x15\cuda_x15_whirlpool_sm3.cu">
       <Filter>Source Files\CUDA\x15</Filter>
     </CudaCompile>
-    <CudaCompile Include="x16r\cuda_x16_echo512.cu">
-      <Filter>Source Files\CUDA\x16r</Filter>
-    </CudaCompile>
     <CudaCompile Include="x16r\cuda_x16_fugue512.cu">
       <Filter>Source Files\CUDA\x16r</Filter>
     </CudaCompile>
@@ -991,6 +988,7 @@
     <CudaCompile Include="x16r\x16r.cu">
       <Filter>Source Files\CUDA\x16r</Filter>
     </CudaCompile>
+    <CudaCompile Include="Algo512\cuda_echo512_shortMsg.cu" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ccminer.ico">
