--- a/ccminer.vcxproj.filters
+++ b/ccminer.vcxproj.filters
@@ -617,6 +617,7 @@
     <ClInclude Include="Algo512\cuda_b_sha512.h" />
     <ClInclude Include="cuda_vectors.h" />
     <ClInclude Include="Algo512\cuda_b_bmw512.h" />
+    <ClInclude Include="Algo512\cuda_b_hamsi512.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="cuda.cpp">
@@ -1002,6 +1003,7 @@
     <CudaCompile Include="Algo512\cuda_b_keccak512.cu" />
     <CudaCompile Include="Algo512\cuda_b_sha512.cu" />
     <CudaCompile Include="Algo512\cuda_b_bmw512.cu" />
+    <CudaCompile Include="Algo512\cuda_b_hamsi512.cu" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ccminer.ico">
