--- a/ccminer.vcxproj.filters
+++ b/ccminer.vcxproj.filters
@@ -618,6 +618,7 @@
     <ClInclude Include="cuda_vectors.h" />
     <ClInclude Include="Algo512\cuda_b_bmw512.h" />
     <ClInclude Include="Algo512\cuda_b_hamsi512.h" />
+    <ClInclude Include="Algo512\cuda_b_cubehash512.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="cuda.cpp">
@@ -1004,6 +1005,7 @@
     <CudaCompile Include="Algo512\cuda_b_sha512.cu" />
     <CudaCompile Include="Algo512\cuda_b_bmw512.cu" />
     <CudaCompile Include="Algo512\cuda_b_hamsi512.cu" />
+    <CudaCompile Include="Algo512\cuda_b_cubehash512.cu" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ccminer.ico">
