--- a/ccminer.vcxproj.filters
+++ b/ccminer.vcxproj.filters
@@ -620,6 +620,8 @@
     <ClInclude Include="Algo512\cuda_b_hamsi512.h" />
     <ClInclude Include="Algo512\cuda_b_cubehash512.h" />
     <ClInclude Include="Algo512\cuda_b_jh512.h" />
+    <ClInclude Include="phi\cuda_phi2d.h" />
+    <ClInclude Include="phi\cuda_phi2_skein512.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="cuda.cpp">
@@ -1008,6 +1010,9 @@
     <CudaCompile Include="Algo512\cuda_b_hamsi512.cu" />
     <CudaCompile Include="Algo512\cuda_b_cubehash512.cu" />
     <CudaCompile Include="Algo512\cuda_b_jh512.cu" />
+    <CudaCompile Include="phi\phi2d.cu" />
+    <CudaCompile Include="phi\cuda_phi2_skein512.cu" />
+    <CudaCompile Include="phi\cuda_phi2_lyra2.cu" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ccminer.ico">
