--- a/res/ccminer.rc
+++ b/res/ccminer.rc
@@ -61,13 +61,13 @@ IDI_ICON1               ICON                    "ccminer.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,9,1,0
- PRODUCTVERSION 0,9,1,0
+ FILEVERSION 0,9,2,0
+ PRODUCTVERSION 0,9,2,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
- FILEFLAGS 0x21L
+ FILEFLAGS 0x23L
 #else
- FILEFLAGS 0x20L
+ FILEFLAGS 0x22L
 #endif
  FILEOS 0x40004L
  FILETYPE 0x1L
@@ -77,10 +77,10 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "FileVersion", "0.9.1.0"
+            VALUE "FileVersion", "0.9.2.0"
             VALUE "LegalCopyright", "Copyright (C) 2018"
-            VALUE "ProductName", "ccminer dumax"
-            VALUE "ProductVersion", "0.9.1.0"
+            VALUE "ProductName", "ccminer/dumax"
+            VALUE "ProductVersion", "0.9.2.0"
         END
     END
     BLOCK "VarFileInfo"
